@@ -667,6 +667,7 @@ GEN     FpX_Fp_sub_shallow(GEN y,GEN x,GEN p);
 GEN     FpX_FpV_multieval(GEN P, GEN xa, GEN p);
 GEN     FpX_FpXQ_eval(GEN f,GEN x,GEN T,GEN p);
 GEN     FpX_FpXQV_eval(GEN f,GEN x,GEN T,GEN p);
+GEN     FpX_FpXV_multirem(GEN P, GEN xa, GEN p);
 GEN     FpX_Frobenius(GEN T, GEN p);
 GEN     FpX_Laplace(GEN x, GEN p);
 GEN     FpX_Newton(GEN P, long n, GEN p);
@@ -740,6 +741,7 @@ GEN     FpXQC_to_mod(GEN z, GEN T, GEN p);
 GEN     FpXQM_autsum(GEN x, ulong n, GEN T, GEN p);
 GEN     FpXT_red(GEN z, GEN p);
 GEN     FpXV_FpX_fromdigits(GEN x, GEN T, GEN p);
+GEN     FpXV_chinese(GEN A, GEN P, GEN p, GEN *pt_mod);
 GEN     FpXV_prod(GEN V, GEN p);
 GEN     FpXV_red(GEN z, GEN p);
 GEN     FpXn_exp(GEN x, long n, GEN p);
