@@ -323,6 +323,7 @@ BA 105- [libpari] groupelts_conj_set, group_subgroup_is_faithful
    107- [libpari] idealpseudominvec
    108- [libpari] galoismatrixapply
 BA 109- new GP function permgroups
+BA 110- [libpari] FpX_FpXV_multirem, FpXV_chinese
 
   Removed
      1- obsolete function rootsof1_kannan: use nfrootsof1
